Loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
spec:
  selector:
    app: netflix-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
