servicev2.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-servicev2
spec:
  selector:
    app: netflix-appv2
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
