ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: netflix.bccdevops.site  # Replace with your domain or use a dummy for testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-service
            port:
              number: 80
