ingressv2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingressv2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/canary: \"true\"
    nginx.ingress.kubernetes.io/canary-weight: \"50\"
spec:
  ingressClassName: nginx
  rules:
  - host: netflix.bccdevops.site  # Replace with your domain or use a dummy for testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-servicev2
            port:
              number: 80
